--- a/.gitlab/lint/linux.yml
+++ b/.gitlab/lint/linux.yml
@@ -24,8 +24,8 @@
     KUBERNETES_MEMORY_REQUEST: 16Gi
     KUBERNETES_MEMORY_LIMIT: 16Gi
   script:
-    - !reference [.retrieve_linux_go_deps]
-    - !reference [.retrieve_linux_go_tools_deps]
+    # - !reference [.retrieve_linux_go_deps]
+    # - !reference [.retrieve_linux_go_tools_deps]
     - dda inv -- -e gitlab.test
 
 # .linux_lint3:
