--- a/.gitlab/lint/linux.yml
+++ b/.gitlab/lint/linux.yml
@@ -33,6 +33,7 @@
 #     - dda inv -- -e install-tools
 
 .linux_x64:
+  stage: lint
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$CI_IMAGE_DEB_X64_SUFFIX:$CI_IMAGE_DEB_X64
   tags: ["arch:amd64"]
 
